--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ out/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/encodings.xml
+.idea/misc.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/LNKD.tech Editor.xml
 *.iws
 *.iml
 *.ipr
