--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,11 @@
             <artifactId>antlr4-runtime</artifactId>
             <version>4.13.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.classgraph</groupId>
+            <artifactId>classgraph</artifactId>
+            <version>4.8.174</version>
+        </dependency>
     </dependencies>
 
 </project>
