--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>domain-model</artifactId>
-    <groupId>ru.compprehension.its</groupId>
-    <version>2.0-SNAPSHOT</version>
+    <artifactId>its_DomainModel</artifactId>
+    <groupId>com.github.Max-Person</groupId>
+    <version>master-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>DomainModel</name>
@@ -16,13 +16,6 @@
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.compiler.jvmTarget>17</kotlin.compiler.jvmTarget>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>mavenCentral</id>
-            <url>https://repo1.maven.org/maven2/</url>
-        </repository>
-    </repositories>
 
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
