--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <artifactId>its_DomainModel</artifactId>
     <groupId>com.github.Max-Person</groupId>
-    <version>master-SNAPSHOT</version>
+    <version>2.15.1</version>
     <packaging>jar</packaging>
 
     <name>DomainModel</name>
